...
        modifier = Modifier
            .fillMaxWidth(0.9f)
            .height(70.dp)
            .clip(RoundedCornerShape(50.dp))
            .background(buttonColor)
            .clickable(enabled = !isMatchmakingActive.value) { openPreferences() }
            .testTag("FindGroupButton"),
        contentAlignment = Alignment.Center
    ) {
        Text(
            text = buttonText,
            color = if (isMatchmakingActive.value) BlueDarker.copy(alpha = 0.5f) else BlueDarker,
            style = TextStyle(fontFamily = fontFamily, fontSize = 25.sp)
...
                        }
                        Spacer(modifier = Modifier.height(8.dp))
                    }
                }

                else -> Text(
                    text = "No groups found",
                    color = Purple,
                    fontFamily = regularText,
                    fontSize = 16.sp
                )
            }
        }
...
