...
fun ListReportsPreview() {

    val exampleReport = Report(
        report_id = 1,
        reporter = User(
            discord_id = "1",
            username = "sanhal23",
            email = "sanhal23@discord.com",
            banned = false
        ),
        reported_user = User(
            discord_id = "2",
            username = "rubination",
...
