...
                    if (groupUrl != null) {
                        val intent = Intent(Intent.ACTION_VIEW, Uri.parse(groupUrl))
                        context.startActivity(intent)
                    }
                }
            }
            .testTag("DiscordButton"),
        contentAlignment = Alignment.Center
    ) {
        Text(
            text = if (isLoading) "Loading..." else "Go to Discord Group",
            color = BlueDarker,
            style = TextStyle(
...
